Enhanced dockerfile and docker-compose with volumes. Added the command to download the spark2.3.0 package for the image. Added a build_run command that re-builds the image, composes the container, and gets the link for the jupyter notebook running

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,4 +8,8 @@ services:
       image: spark/install
       ports:
         - '8888:8888'
+      volumes:
+        - notebooks:/notebooks
 
+volumes:
+  notebooks:
