--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
    jupyter:
-      image: spark/install
+      image: spark_docker
       ports:
         - '8888:8888'
       volumes:
